--- a/Головна.html
+++ b/Головна.html
@@ -26,23 +26,18 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "",
-		"logo": "images/logo.png"
+		"logo": "images/logo1.png"
 }</script>
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="Головна">
     <meta property="og:type" content="website">
   </head>
-  <body class="u-body u-stick-footer"><header class="u-clearfix u-grey-75 u-header u-header" id="sec-a7f6"><div class="u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xs u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="150" data-image-height="150">
-          <img src="images/logo.png" class="u-logo-image u-logo-image-1">
-        </a>
-        <a href="mailto:info@gmail.com" class="u-active-none u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-text-custom-color-1 u-top-left-radius-0 u-top-right-radius-0 u-btn-1"><span class="u-icon u-icon-1"><svg class="u-svg-content" viewBox="0 0 24 16" x="0px" y="0px" style="width: 1em; height: 1em;"><path fill="currentColor" d="M23.8,1.1l-7.3,6.8l7.3,6.8c0.1-0.2,0.2-0.6,0.2-0.9V2C24,1.7,23.9,1.4,23.8,1.1z M21.8,0H2.2
-	c-0.4,0-0.7,0.1-1,0.2L10.6,9c0.8,0.8,2.2,0.8,3,0l9.2-8.7C22.6,0.1,22.2,0,21.8,0z M0.2,1.1C0.1,1.4,0,1.7,0,2V14
-	c0,0.3,0.1,0.6,0.2,0.9l7.3-6.8L0.2,1.1z M15.5,9l-1.1,1c-1.3,1.2-3.6,1.2-4.9,0l-1-1l-7.3,6.8c0.2,0.1,0.6,0.2,1,0.2H22
-	c0.4,0,0.6-0.1,1-0.2L15.5,9z"></path></svg><img></span>info@gmail.com
+  <body class="u-body u-stick-footer"><header class="u-clearfix u-grey-75 u-header u-header" id="sec-a7f6"><div class="u-clearfix u-sheet u-sheet-1">
+        <a href="Головна.html" data-page-id="798429939" class="u-image u-logo u-image-1" data-image-width="199" data-image-height="254" title="Головна">
+          <img src="images/logo1.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
-          <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 700; text-transform: uppercase;">
+          <div class="menu-collapse u-custom-font u-font-roboto-slab" style="font-size: 1rem; letter-spacing: 0px; text-transform: uppercase; font-weight: 700;">
             <a class="u-button-style u-custom-active-border-color u-custom-border u-custom-border-color u-custom-borders u-custom-hover-border-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
               <svg class="u-svg-link" viewBox="0 0 24 24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
               <svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"><g><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
@@ -50,24 +45,30 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-spacing-30 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-5 u-text-hover-grey-15" href="Головна.html" style="padding: 10px 0px;">Головна</a>
-</li><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-5 u-text-hover-grey-15" href="Галерея.html" style="padding: 10px 0px;">Галерея</a>
-</li><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-5 u-text-hover-grey-15" href="Розваги.html" style="padding: 10px 0px;">Розваги</a>
+            <ul class="u-custom-font u-font-roboto-slab u-nav u-spacing-30 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-5 u-text-hover-grey-15" href="Головна.html" style="padding: 14px 8px;">Головна</a>
+</li><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-5 u-text-hover-grey-15" href="Галерея.html" style="padding: 14px 8px;">Галерея</a>
+</li><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-5 u-text-hover-grey-15" href="Контакти.html" style="padding: 14px 8px;">Контакти</a>
+</li><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-5 u-text-hover-grey-15" href="Ішне.html" style="padding: 14px 8px;">Ішне</a>
+</li><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-5 u-text-hover-grey-15" href="Розваги.html" style="padding: 14px 16px 14px 8px;">Розваги</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Головна.html" style="padding: 10px 0px;">Головна</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Галерея.html" style="padding: 10px 0px;">Галерея</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Розваги.html" style="padding: 10px 0px;">Розваги</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Головна.html" style="padding: 8px 0px;">Головна</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Галерея.html" style="padding: 8px 0px;">Галерея</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Контакти.html" style="padding: 8px 0px;">Контакти</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Ішне.html" style="padding: 8px 0px;">Ішне</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Розваги.html" style="padding: 8px 0px;">Розваги</a>
 </li></ul>
               </div>
             </div>
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
+        <a href="mailto:info@gmail.com" class="u-active-none u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-text-custom-color-1 u-top-left-radius-0 u-top-right-radius-0 u-btn-1"><span class="u-file-icon u-icon u-icon-1"><img src="images/3781615.png" alt=""></span>info@gmail.com
+        </a>
       </div></header>
     <section class="u-align-center u-clearfix u-image u-shading u-section-1" src="" data-image-width="1000" data-image-height="667" id="sec-ac2d">
       <div class="u-clearfix u-sheet u-sheet-1">
@@ -109,7 +110,7 @@
               </div>
               <div class="u-size-20 u-size-30-md">
                 <div class="u-layout-row">
-                  <div class="u-align-left u-container-style u-image u-layout-cell u-size-60 u-image-1" src="" data-image-width="800" data-image-height="600">
+                  <div class="u-align-left u-container-style u-image u-layout-cell u-size-60 u-image-1" src="" data-image-width="501" data-image-height="600">
                     <div class="u-container-layout u-valign-top u-container-layout-4" src=""></div>
                   </div>
                 </div>
@@ -323,11 +324,13 @@
     <section class="u-clearfix u-section-6" id="sec-300a">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="fr-view u-align-center u-clearfix u-rich-text u-text u-text-1">
-          <h1 style="text-align: center;">Церква Артистратига Михаїла в Зашкові</h1>
-          <p style="text-align: center;">
-            <span style="line-height: 2.0;">Sample text. Click to select the text box. Click again or double click to start editing the text. Dictum non consectetur a erat nam at. Aliquam malesuada bibendum arcu vitae elementum curabitur vitae. Tellus mauris a diam maecenas sed enim ut sem. Ipsum faucibus vitae aliquet nec ullamcorper sit amet risus nullam. Pretium nibh ipsum consequat nisl vel pretium. In eu mi bibendum neque eges<img src="images/_1.png" align="center" style="width: 366px;" class="fr-dii fr-fic fr-fil" width="570">tas congue. Vitae ultricies leo integer malesuada nunc. Nibh praesent tristique magna sit amet purus gravida. Diam volutpat commodo sed egestas. Gravida dictum fusce ut placerat orci nulla pellentesque. Ornare massa eget egestas purus viverra. Morbi enim nunc faucibus a pellentesque sit amet porttitor. Mattis pellentesque id nibh tortor id aliquet lectus proin nibh. Molestie nunc non blandit massa enim nec dui. Felis imperdiet proin fermentum leo vel orci porta. Natoque penatibus et magnis dis parturient montes nascetur ridiculus mus. 
-            </span>
+          <h1>
+            <span class="u-custom-font u-font-roboto-slab">Церква Артистратига Михаїла в Зашкові</span>
+          </h1>
+          <p id="isPasted">
+            <img src="images/_2.png" width="570" style="width: 570px;" class="fr-dii fr-fic fr-fir">
           </p>
+          <p>1759 p. у селі була збудована дерев’яна церква. У 1905-1906 pp. стараннями пароха о. Теодора Леонтовича зведено замість неї нову муровану споруду. Зведена будівничим Іваном Розмусом зі Львова за проектом львівського архітекта Крижановського, про що свідчив напис на вмурованій у вівтарі таблиці. Посвячена 22 червня 1924 р. митрополитом Андрієм Шеп-тицьким. У 1930-х pp. стінопис вівтаря, нави, бокових рамен, захристій і купола виконали артисти-малярі Михайло Осінчук та Павло Ковжун. Розташована на пагорбі в центрі села, при дорозі. Оточена старими липами. На північ від церкви розміщений сільський цвинтар. Мурована хрещата в плані однобанна споруда на високому мурованому з каменя цоколі. До квадратової в плані нави прилягають з півночі і півдня укорочені прямокутні бокові рамена, з заходу – прямокутний бабинець, а зі сходу – прямокутний вівтар з меншою гранчастою апсидою та двома прямокутними ризничками по боках. Наву вінчає грушаста баня з ажуровим ліхтарем і стіжком, посаджена на високий світловий восьмибічний барабан. Рамена хреста вкриті двосхилими причілковими дахами, завершеними на краях кам’яними хрестами. Апсида вкрита п’ятисхилим дахом. Тиньковані стіни членовані лопатками з невеликими контрфорсами і розділені підвіконною тягою ґзимсом на дві частини – нижню рустовану і верхню гладку, завершену профільованим ґзимсом. Площини стін ризниць не рустовані. Портал західного фасаду обрамований двома півколонами з корінфськими капітелями і архівольтом, в тимпані якого розміщене зображення св. арх. Михайла. На північний захід від церкви розташована дерев’яна стовпова дзвіниця з маківкою на місці сходження гребенів хрещатого даху. З заходу і сходу до неї прилягають невеликі прямокутні приміщення, вкриті односхилими дахами.</p>
         </div>
       </div>
     </section>
@@ -337,12 +340,18 @@
           <div class="u-layout">
             <div class="u-layout-row">
               <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-1">
-                <div class="u-container-layout u-valign-middle u-container-layout-1">
-                  <h2 class="u-text u-text-1">Завітайте до нас за адресою: </h2>
-                  <p class="u-text u-text-2">Офіс Львівської громади с. Зашків вул. Є. Коновальця, 110А, 80375</p>
-                  <p class="u-text u-text-3">+3 (032)297-57-95</p>
-                  <p class="u-text u-text-4">
-                    <a href="mailto:contacts@esbnyc.com">contacts@gmail.com</a>
+                <div class="u-container-layout u-container-layout-1">
+                  <h2 class="u-custom-font u-font-roboto-slab u-text u-text-1">При необхідності звертайтеся<br>в ЦНАП с. Зашків за адресою:
+                  </h2>
+                  <p class="u-text u-text-2"><span class="u-file-icon u-icon u-icon-1"><img src="images/854901.png" alt=""></span>&nbsp;Офіс Львівської громади с. Зашків вул. Є. Коновальця, 110А, 80375
+                  </p>
+                  <p class="u-text u-text-3"><span class="u-file-icon u-icon u-icon-2"><img src="images/2948010.png" alt=""></span>&nbsp;+38 (032)297-57-95
+                  </p>
+                  <p class="u-text u-text-4"></p>
+                  <a href="https://www.facebook.com/cnaplviv/" target="_blank" class="u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-font-roboto-slab u-hover-none u-none u-text-palette-1-base u-btn-1"><span class="u-file-icon u-icon u-icon-3"><img src="images/7475431.png" alt=""></span>&nbsp;​Facebook
+                  </a>
+                  <p class="u-text u-text-5"><span class="u-file-icon u-icon u-icon-4"><img src="images/37816151.png" alt=""></span>
+                    <a href="mailto:contacts@esbnyc.com"> service_center@lvivcity.gov.ua</a>
                   </p>
                 </div>
               </div>
