--- a/Ішне.html
+++ b/Ішне.html
@@ -26,11 +26,11 @@
     <meta property="og:title" content="Ішне">
     <meta property="og:type" content="website">
   </head>
-  <body class="u-body"><header class="u-clearfix u-grey-75 u-header u-header" id="sec-a7f6"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="Головна.html" data-page-id="798429939" class="u-image u-logo u-image-1" data-image-width="199" data-image-height="254" title="Головна">
+  <body class="u-body"><header class="u-clearfix u-grey-75 u-header u-sticky u-sticky-56bd u-header" id="sec-a7f6"><div class="u-clearfix u-sheet u-sheet-1">
+        <a href="Головна.html" data-page-id="798429939" class="u-align-left u-image u-logo u-image-1" data-image-width="199" data-image-height="254" title="Головна">
           <img src="images/logo1.png" class="u-logo-image u-logo-image-1">
         </a>
-        <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
+        <nav class="u-align-right u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse u-custom-font u-font-roboto-slab" style="font-size: 1rem; letter-spacing: 0px; text-transform: uppercase; font-weight: 700;">
             <a class="u-button-style u-custom-active-border-color u-custom-border u-custom-border-color u-custom-borders u-custom-hover-border-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
               <svg class="u-svg-link" viewBox="0 0 24 24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
@@ -61,7 +61,7 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-        <a href="mailto:info@gmail.com" class="u-active-none u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-text-custom-color-1 u-top-left-radius-0 u-top-right-radius-0 u-btn-1"><span class="u-file-icon u-icon u-icon-1"><img src="images/3781615.png" alt=""></span>info@gmail.com
+        <a href="mailto:zashkivskatg@gmail.com" class="u-active-none u-align-center-xs u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-btn-rectangle u-button-style u-custom-font u-font-roboto-slab u-hover-none u-none u-radius-0 u-text-custom-color-1 u-top-left-radius-0 u-top-right-radius-0 u-btn-1"><span class="u-file-icon u-icon u-icon-1"><img src="images/3781615.png" alt=""></span>posta@gmail.com
         </a>
       </div></header>
     <section class="u-align-left u-clearfix u-white u-section-1" id="carousel_69f0">
